--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/MyAccount/Edit.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/MyAccount/Edit.cshtml
@@ -62,7 +62,7 @@
 
             <div class="show-if-not-wantsPassword">
                 <p>
-                    @localizer["Du kommer endast kunna logga in med magisk e-postlänk om lösenordet tas bort."]
+                    @localizer["Du kommer endast kunna logga in med autentiseringskod via e-post om lösenordet tas bort."]
                 </p>
                 <p>
                     <label for="@Html.IdFor(x => x.WantsPassword)" class="mox-button">@localizer["Ta inte bort lösenord"]</label>
@@ -91,7 +91,7 @@
 
             <div class="show-if-not-wantsPassword">
                 <p>
-                    @localizer["Du kan endast logga in med magisk e-postlänk, ett lösenord måste skapas innan det kan användas för att logga in."]
+                    @localizer["Du kan endast logga in med autentiseringskod via e-post, ett lösenord måste skapas innan det kan användas för att logga in."]
                 </p>
 
                 <p>
