--- a/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Edit.cshtml
+++ b/src/Mindbite.Mox.Identity/Areas/IdentitySettings/Views/UserManagement/Edit.cshtml
@@ -58,7 +58,7 @@
 
             <div class="show-if-not-wantsPassword">
                 <p>
-                    @localizer["{0} kommer endast kunna logga in med magisk e-postlänk om lösenordet tas bort.", @Model.Name]
+                    @localizer["{0} kommer endast kunna logga in med autentiseringskod via e-post om lösenordet tas bort.", @Model.Name]
                 </p>
                 <p>
                     <label for="@Html.IdFor(x => x.WantsPassword)" class="mox-button">@localizer["Ta inte bort lösenord"]</label>
@@ -87,7 +87,7 @@
 
             <div class="show-if-not-wantsPassword">
                 <p>
-                    @localizer["{0} kan endast logga in med magisk e-postlänk, ett lösenord måste skapas innan det kan användas för att logga in.", @Model.Name]
+                    @localizer["{0} kan endast logga in med autentiseringskod via e-post, ett lösenord måste skapas innan det kan användas för att logga in.", @Model.Name]
                 </p>
                 
                 <p>
