--- a/src/Mindbite.Mox.Identity/Views/LogIn/PasswordOrMagicLink.cshtml
+++ b/src/Mindbite.Mox.Identity/Views/LogIn/PasswordOrMagicLink.cshtml
@@ -11,7 +11,7 @@
     <h2>@localizer["Långt lösenord?"]</h2>
     <p>
         Har du ett långt lösenord, eller har du kanske glömt det?<br />
-        <strong>Logga in utan lösenord</strong> med ett klick via vår magiska e-postlänk!
+        <strong>Logga in utan lösenord</strong> med direktinloggningslänk skickad via e-post!
     </p>
 
     <div class="mox-login-col2">
