--- a/src/Mindbite.Mox.Core/Views/Shared/Form_Create.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Form_Create.cshtml
@@ -3,13 +3,17 @@
     Layout = (string)ViewData["Layout"];
 }
 
-@if ((bool)ViewData["RenderBreadCrumbs"])
+@if ((bool)ViewData["RenderDefaultCreateHeader"])
 {
     @await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
+    <h1>Skapa @ViewData["ModelDisplayName"]?.ToString().ToLower()</h1>
+    @await Html.PartialAsync("Mox/UI/Message")
 }
 
-<h1>Skapa @ViewData["ModelDisplayName"]?.ToString().ToLower()</h1>
-@await Html.PartialAsync("Mox/UI/Message")
+@if (!string.IsNullOrWhiteSpace((string)ViewData["CreateHeaderPartial"]))
+{
+    @await Html.PartialAsync((string)ViewData["CreateHeaderPartial"], (object)Model)
+}
 
 @using (Html.BeginForm(FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
