--- a/src/Mindbite.Mox.Core/Views/Shared/Form_Index.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Form_Index.cshtml
@@ -5,13 +5,17 @@
 
 @model Mindbite.Mox.UI.IDataTable
 
-@if ((bool)ViewData["RenderBreadCrumbs"])
+@if ((bool)ViewData["RenderDefaultIndexHeader"])
 {
     @await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = false }.ToExpando())
+    <h1>@ViewData["IndexTitle"]</h1>
+    @await Html.PartialAsync("Mox/UI/Message")
 }
 
-<h1>@ViewData["IndexTitle"]</h1>
-@await Html.PartialAsync("Mox/UI/Message")
+@if (!string.IsNullOrWhiteSpace((string)ViewData["IndexHeaderPartial"]))
+{ 
+    @await Html.PartialAsync((string)ViewData["IndexHeaderPartial"], (object)Model)
+}
 
 <ul class="mox-filters">
     <li>
