--- a/src/Mindbite.Mox.Identity/wwwroot/identity/css/base.css
+++ b/src/Mindbite.Mox.Identity/wwwroot/identity/css/base.css
@@ -1,6 +1,8 @@
 html, body { margin: 0; padding: 0; top: 0; bottom: 0; left: 0; right: 0; position: absolute; font-size: 14px; background-image: url('https://online.mindbite.se/clientfiles/gfx/gui/bgsignonclouds.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center; color: #24292e; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
 input, select, textarea, button { font-family:inherit; }
 
+a { display: block; color: #000; text-align: center; margin-top: 10px; }
+
 .mox-login { background-color: #fafafa; border: 0; padding: 0; width: 100%; max-width: 400px; margin: 200px auto 0; border-radius: 3px; overflow: hidden; }
 .mox-login fieldset { border: 0; padding: 10px 20px; }
 .mox-login .logo { margin: 0; background-color: #24292e; color: #fff; font-weight: bold; font-size: 28px; padding: 10px 20px; text-align: left; }
@@ -18,7 +20,6 @@ input, select, textarea, button { font-family:inherit; }
 
 .mox-login fieldset p input[type=file] { width: 100%; box-sizing: border-box; }
 
-
 a.mox-login-button,
 .mox-login fieldset input[type=submit],
 .mox-login fieldset button.save { -webkit-appearance: none; -moz-appearance: none; appearance: none; cursor: pointer; margin: 0; line-height: 19px; padding: 9px 10px; border: 0; border-radius: 3px; background-color: #20bea1; text-decoration: none; color: #fff; font-weight: 500; display: block; width: 100%; box-sizing: border-box; font-size: 1rem; }
@@ -26,18 +27,15 @@ a.mox-login-button:hover,
 .mox-login fieldset input[type=submit]:hover,
 .mox-login fieldset button.save:hover { background-color: #1dab91; }
 
-
 a.mox-login-button.plain,
 .mox-login fieldset input[type=submit].plain,
-.mox-login fieldset button.save.plain { background-color: #ccc; color: #24292e; }
+.mox-login fieldset button.save.plain { background-color: #ccc; color: #24292e; margin-top: 0; }
 a.mox-login-button.plain:hover,
 .mox-login fieldset input[type=submit].plain:hover,
 .mox-login fieldset button.save.plain:hover { background-color: #bbb; }
 
 .mox-login fieldset ul.checkbox { list-style: none; margin: 0; padding: 0; }
 .mox-login fieldset ul.checkbox li { display: block; }
-
-a { display: block; color: #000; text-align: center; margin-top: 10px; }
 
 .mox-login input[type=checkbox] { width: 16px; height: 16px; padding: 0; margin:0; vertical-align: middle; position: relative; top: -1px; }
 
