--- a/src/Mindbite.Mox.Core/Views/Shared/Form_Create.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Form_Create.cshtml
@@ -5,7 +5,10 @@
 
 @if ((bool)ViewData["RenderDefaultCreateHeader"])
 {
-    @await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
+    @if(!Context.Request.IsAjaxRequest())
+    {
+        @await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
+    }
     <h1>Skapa @ViewData["ModelDisplayName"]?.ToString().ToLower()</h1>
     @await Html.PartialAsync("Mox/UI/Message")
 }
@@ -25,6 +28,8 @@
     </fieldset>
 
     <fieldset class="buttons">
-        <input type="submit" value="Skapa @ViewData["ModelDisplayName"]?.ToString().ToLower()" />
+        <p>
+            <input type="submit" value="Skapa @ViewData["ModelDisplayName"]?.ToString().ToLower()" />
+        </p>
     </fieldset>
 }
