--- a/src/Mindbite.Mox.Core/Views/Shared/Form_Index.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Form_Index.cshtml
@@ -5,23 +5,23 @@
 
 @model Mindbite.Mox.UI.IDataTable
 
-@if ((bool)ViewData["RenderDefaultIndexHeader"])
+@if ((bool)ViewData["RenderDefaultIndexHeader"] && string.IsNullOrWhiteSpace((string)ViewData["IndexHeaderPartial"]))
 {
     @await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = false }.ToExpando())
     <h1>@ViewData["IndexTitle"]</h1>
     @await Html.PartialAsync("Mox/UI/Message")
+
+    <ul class="mox-filters">
+        <li>
+            @Html.ActionLink($"Skapa {ViewData["ModelDisplayName"]?.ToString().ToLower()}", "Create", null, ViewContext.RouteData.Values, new { @class = "mox-button" })
+        </li>
+    </ul>
 }
 
 @if (!string.IsNullOrWhiteSpace((string)ViewData["IndexHeaderPartial"]))
 { 
     @await Html.PartialAsync((string)ViewData["IndexHeaderPartial"], (object)Model)
 }
-
-<ul class="mox-filters">
-    <li>
-        @Html.ActionLink($"Skapa {ViewData["ModelDisplayName"]?.ToString().ToLower()}", "Create", null, ViewContext.RouteData.Values, new { @class = "mox-button" })
-    </li>
-</ul>
 
 <div id="js-table"></div>
 
