More client side options for data tables. Better options for form controllers.

--- a/src/Mindbite.Mox.Core/Views/Shared/Form_Delete.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Form_Delete.cshtml
@@ -26,9 +26,9 @@
         @Html.AntiForgeryToken()
         @Html.ValidationSummary(true)
 
-        <fieldset style="display: none">
+        <div style="display: none">
             @await Html.PartialAsync("_Form_Fields", (object)Model)
-        </fieldset>
+        </div>
 
         <fieldset>
             <p>
