--- a/src/Mindbite.Mox.Core/Views/Shared/Form_Edit.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Form_Edit.cshtml
@@ -9,7 +9,7 @@
     {
         @await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
     }
-    <h1>Redigera @ViewData["ModelDisplayName"]?.ToString().ToLower()</h1>
+    <h1>@ViewData["EditPageHeading"]</h1>
     @await Html.PartialAsync("Mox/UI/Message")
 }
 
