--- a/src/Mindbite.Mox.Core/Views/Shared/Form_Index.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Form_Index.cshtml
@@ -8,7 +8,7 @@
 @if ((bool)ViewData["RenderDefaultIndexHeader"] && string.IsNullOrWhiteSpace((string)ViewData["IndexHeaderPartial"]))
 {
     @await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = false }.ToExpando())
-    <h1>@ViewData["IndexTitle"]</h1>
+    <h1>@ViewData["IndexPageHeading"]</h1>
     @await Html.PartialAsync("Mox/UI/Message")
 
     <ul class="mox-filters">
