--- a/src/Mindbite.Mox.Core/Views/Shared/Mox/StaticIncludes/_AppFiles.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Mox/StaticIncludes/_AppFiles.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Hosting;
-@inject IHostingEnvironment env;
+@inject IWebHostEnvironment env;
 @inject Microsoft.Extensions.Options.IOptions<Mindbite.Mox.Configuration.Config> Config
 @inject Microsoft.Extensions.Options.IOptions<Mindbite.Mox.Configuration.StaticIncludes.StaticFileProviderOptions> StaticFileProviderOptions
 
