--- a/src/Mindbite.Mox.Core/Views/Shared/Mox/StaticIncludes/_Files.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Mox/StaticIncludes/_Files.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Hosting;
 @inject Microsoft.Extensions.Options.IOptions<Mindbite.Mox.Configuration.StaticIncludes.IncludeConfig> Config
 @inject Microsoft.Extensions.Options.IOptions<Mindbite.Mox.Configuration.StaticIncludes.StaticFileProviderOptions> StaticFileProviderOptions
-@inject IHostingEnvironment env;
+@inject IWebHostEnvironment env;
 
 @{
     var renderInHead = true;
