--- a/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/Images.cshtml
+++ b/src/Examples/Mindbite.Mox.DesignDemoApp/Areas/DesignDemoMoxApp/Views/Designs/Images.cshtml
@@ -42,7 +42,7 @@
         @foreach (var image in Model.Design.Images)
         {
             <li style="width: calc(25% - 20px); margin: 10px; height: 320px; float: left; display: block; position: relative">
-                <img src="~/static/@image.RelativePath" style="max-width: 100%; max-height: 100%;" />
+                <img src="~/@image.RelativePath" style="max-width: 100%; max-height: 100%;" />
                 <p style="position: absolute; bottom: 0; left: 0;">@image.Title</p>
             </li>
         }
