--- a/src/Mindbite.Mox.Core/Views/Shared/Form_Index.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Form_Index.cshtml
@@ -5,7 +5,7 @@
 
 @model Mindbite.Mox.UI.IDataTable
 
-@if ((bool)ViewData["RenderDefaultIndexHeader"] && string.IsNullOrWhiteSpace((string)ViewData["IndexHeaderPartial"]))
+@if ((bool)ViewData["RenderDefaultIndexHeader"])
 {
     @await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = false }.ToExpando())
     <h1>@ViewData["IndexPageHeading"]</h1>
