--- a/src/Mindbite.Mox.Core/Views/Shared/Mox/Email/_Layout.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Mox/Email/_Layout.cshtml
@@ -57,7 +57,7 @@
             <td class="container" style="font-family: sans-serif; font-size: 14px; vertical-align: top; display: block; max-width: 580px; padding: 10px; width: 580px; margin: 0 auto;" width="580" valign="top">
                 <div class="content" style="box-sizing: border-box; display: block; margin: 0 auto; max-width: 580px; padding: 10px;">
 
-                    @if (string.IsNullOrWhiteSpace(ViewData["LogoUrl"] as string))
+                    @if (!string.IsNullOrWhiteSpace(ViewData["LogoUrl"] as string))
                     {
                         <div class="footer" style="clear: both; margin-top: 10px; text-align: center; width: 100%;">
                             <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;" width="100%">
