--- a/src/Mindbite.Mox.Core/Views/Shared/Mox/Email/_Layout.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Mox/Email/_Layout.cshtml
@@ -63,7 +63,7 @@
                             <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;" width="100%">
                                 <tr>
                                     <td class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; color: #999999; font-size: 12px; text-align: center;" valign="top" align="center">
-                                        <img src="@ViewData["LogoUrl"]" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%;">
+                                        <img src="@ViewData["LogoUrl"]" style="border: none; -ms-interpolation-mode: bicubic; max-width: 100%;" @(Html.Raw(string.IsNullOrWhiteSpace(ViewData["LogoWidth"] as string) ? "" : $"width=\"{ViewData["LogoWidth"]}\""))>
                                     </td>
                                 </tr>
                             </table>
