--- a/src/Mindbite.Mox.Core/Views/Shared/Mox/StaticIncludes/_AppFiles.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Mox/StaticIncludes/_AppFiles.cshtml
@@ -19,6 +19,6 @@
 {
     @foreach (var style in include.Files.Where(x => x.RenderInHead == renderInHead))
     {
-        @(style.Render(include.StaticRoot, StaticFileProviderOptions.Value.FileProviders, Mindbite.Mox.Configuration.StaticIncludes.FileVersionHash.FileHash))
+        @(style.Render(include.StaticRoot, StaticFileProviderOptions.Value.FileProviders))
     }
 }
