--- a/src/Mindbite.Mox.Core/Views/Shared/Mox/StaticIncludes/_Files.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Mox/StaticIncludes/_Files.cshtml
@@ -14,5 +14,5 @@
 
 @foreach (var style in Config.Value.Files.Where(x => x.RenderInHead == renderInHead))
 {
-    @(style.Render(Config.Value.StaticRoot, StaticFileProviderOptions.Value.FileProviders, Mindbite.Mox.Configuration.StaticIncludes.FileVersionHash.FileHash))
+    @(style.Render(Config.Value.StaticRoot, StaticFileProviderOptions.Value.FileProviders))
 }
