--- a/src/Mindbite.Mox.Identity/Views/LogIn/PasswordOrMagicLink.cshtml
+++ b/src/Mindbite.Mox.Identity/Views/LogIn/PasswordOrMagicLink.cshtml
@@ -10,8 +10,8 @@
 
     <h2>@localizer["Långt lösenord?"]</h2>
     <p>
-        Har du ett långt lösenord, eller har du kanske glömt det?<br />
-        <strong>Logga in utan lösenord</strong> med direktinloggningslänk skickad via e-post!
+        @localizer["Har du ett långt lösenord, eller har du kanske glömt det?"]<br />
+        <strong>@localizer["Logga in utan lösenord"]</strong> @localizer["med direktinloggningslänk skickad via e-post!"]
     </p>
 
     <div class="mox-login-col2">
