--- a/src/Mindbite.Mox.Core/Views/Shared/Form_Create.cshtml
+++ b/src/Mindbite.Mox.Core/Views/Shared/Form_Create.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Mindbite.Mox.Extensions
+@using Microsoft.Extensions.Localization;
+@inject IStringLocalizer localizer
 @{
     Layout = (string)ViewData["Layout"];
 }
@@ -9,7 +11,7 @@
     {
         @await Html.PartialAsync("Mox/UI/AppBreadCrumbs", new { IncludeCurrentMenu = true }.ToExpando())
     }
-    <h1>Skapa @ViewData["ModelDisplayName"]?.ToString().ToLower()</h1>
+    <h1>@localizer["Skapa {0}", ViewData["ModelDisplayName"]?.ToString().ToLower()]</h1>
     @await Html.PartialAsync("Mox/UI/Message")
 }
 
@@ -29,7 +31,7 @@
 
     <fieldset class="buttons">
         <p>
-            <input type="submit" value="Skapa @ViewData["ModelDisplayName"]?.ToString().ToLower()" />
+            <input type="submit" value="@localizer["Skapa {0}", ViewData["ModelDisplayName"]?.ToString().ToLower()]" />
         </p>
     </fieldset>
 }
