--- a/src/Mindbite.Mox.Core/wwwroot/mox/static/css/base.css
+++ b/src/Mindbite.Mox.Core/wwwroot/mox/static/css/base.css
@@ -1,6 +1,7 @@
-﻿html, body { margin: 0; height: 100%; overflow: hidden; background-color: #fff; color: #24292e; position: relative; padding: 0; font-size: 14px; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
+﻿html, body { margin: 0; height: 100%; overflow: hidden; background-color: #fff; color: #24292e; position: relative; padding: 0; font-size: 14px; line-height: 1.4; font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
 
-input, textarea, select, button { font-size: 1rem; line-height: 1.5em; color: #24292e; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
+input, textarea, select, button { font-size: 1rem; line-height: 1.5em; color: #24292e; font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
+
 input[type=button], input[type=submit], button { line-height: 1.2em; }
 select { -webkit-appearance: none; -moz-appearance: none; appearance: none; background-image: url('/mox/static/svg/arrow-down.svg'); background-position: right 10px center; background-repeat: no-repeat; background-size: 11px; padding-right: 28px !important; }
 
@@ -98,7 +99,7 @@ h4, h5, h6 { font-size: 1rem; }
 /**************************************************************
     DATATABLE
 ***************************************************************/
-.mox-datatable { width: 100%; border-collapse: collapse; margin-bottom: 20px; }
+.mox-datatable { width: 100%; border-collapse: collapse; margin-bottom: 20px; font-feature-settings: "tnum"; }
 .mox-datatable a { text-decoration: none; color: #24292e; }
 .mox-datatable tr th { padding: 0; text-align: left; background-color: #f5f5f8; }
 .mox-datatable tr th > a,
