--- a/src/Mindbite.Mox.Identity/wwwroot/mox/static/identity/login/css/base.css
+++ b/src/Mindbite.Mox.Identity/wwwroot/mox/static/identity/login/css/base.css
@@ -1,4 +1,4 @@
-html, body { margin: 0; padding: 0; top: 0; bottom: 0; left: 0; right: 0; position: absolute; font-size: 14px; background-image: url('https://online.mindbite.se/clientfiles/gfx/gui/bgsignonclouds.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center; color: #24292e; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
+html, body { margin: 0; padding: 0; top: 0; bottom: 0; left: 0; right: 0; position: absolute; font-size: 14px; background-image: url('https://online.mindbite.se/clientfiles/gfx/gui/bgsignonclouds.jpg'); background-size: cover; background-repeat: no-repeat; background-position: center; color: #24292e; line-height: 1.4; font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; }
 input, select, textarea, button { font-family:inherit; }
 
 a { display: block; color: #000; text-align: center; margin-top: 10px; }
